--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@types/js-yaml": "^3.9.1",
     "@types/jsonpath": "^0.2.0",
     "@types/node": "^10.17.52",
-    "typescript": "^4.1.5",
-    "electron": "1.6.7"
+    "electron": "^15.1.2",
+    "typescript": "^4.1.5"
   },
   "dependencies": {
     "d3": "^4.13.0",
